# viewline-command

./: .gitignore  LICENSE  README.md  lineview.py  pyproject.toml  requirements.txt  run-functional-tests  runtests  setup.py
lib/: __init__.py  lineview.py  viewline.py
lineview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: tests.py
