[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viewline-command"
version = "0.1.0"
description = "A command-line tool to display specific lines from a file or stream."
authors = [
    { name = "dcloutman" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "click>=8.2.1,<9.0.0",
    "setuptools==80.9.0"
]

[project.scripts]
viewline = "bin.viewline:main"
